--- a/src/main/resources/vertx-default-jul-logging.properties
+++ b/src/main/resources/vertx-default-jul-logging.properties
@@ -24,4 +24,4 @@ java.util.logging.FileHandler.formatter=io.vertx.core.logging.impl.VertxLoggerFo
 # Put the log in the system temporary directory
 java.util.logging.FileHandler.pattern=%t/vertx.log
 
-io.vertx.vocserver.level=INFO
+iudx.vocserver.level=INFO
