--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,34 @@ networks:
 
 services:
 
+  server:
+    image: vertx/vertx3
+    depends_on:
+      - "db"
+    ports:
+      - "8080:8080"
+      - "443:443"
+    restart: on-failure
+    networks: 
+      - voc-net
+    volumes:
+      - ./:/vocserver
+    command: sh -c "cd vocserver && java -jar target/vocserver-1.0-fat.jar -conf config/vocserver.json"
+    logging:
+         driver: "json-file"
+         options:
+             max-file: "5"
+             max-size: "100m"
+
   db:
     image: mongo
     volumes:
       - mongo-data:/var/lib/mongodb/
       - ./config/mongo_setup.sh:/docker-entrypoint-initdb.d/init.sh
-    ports:
-      - "27017:27017"
     networks: 
       - voc-net
+    expose:
+      - "27017"
     logging:
          driver: "json-file"
          options:
