--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
         <artifactId>json-schema-validator</artifactId>
         <version>2.2.12</version>
     </dependency>
+    <dependency>
+     <groupId>io.vertx</groupId>
+     <artifactId>vertx-config</artifactId>
+     <version>3.9.0</version>
+    </dependency>
+
 
 
     <!-- tag::codegen-dep[] -->
