Added content-type header matching to all routes

--- a/config/example_config.json
+++ b/config/example_config.json
@@ -1,7 +1,7 @@
 {
-  "vocserver.port": 8080,
   "vocserver.jksfile": "config/iudxtruststore.jks",
   "vocserver.jkspasswd": "somepassword",
+  "vocserver.http.port": 8080,
   "vocserver.http.instances": 2,
   "vocserver.database.queue": "vocserver.database.queue",
   "vocserver.database.url": "mongodb://localhost:27017",
