--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ buildNumber.properties
 .mvn/timing.properties
 config/iudxtruststore.jks
 config/vocserver.json
+config/vocserver_local.json
 config/rakshitr@iisc.ac.in-class-1-certificate.pem
