--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,17 @@ services:
          options:
              max-file: "5"
              max-size: "100m"
+  db-local:
+    image: mongo
+    volumes:
+      - mongo-data:/var/lib/mongodb/
+      - ./config/mongo_setup.sh:/docker-entrypoint-initdb.d/init.sh
+    networks: 
+      - voc-net
+    ports:
+      - "27017:27017"
+    logging:
+         driver: "json-file"
+         options:
+             max-file: "5"
+             max-size: "100m"
