--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
      <artifactId>vertx-config</artifactId>
      <version>3.9.0</version>
     </dependency>
+    <dependency>
+     <groupId>io.vertx</groupId>
+     <artifactId>vertx-web-client</artifactId>
+     <version>3.8.2</version>
+    </dependency>
+
+
 
 
 
