Updated iudx auth for insertions

--- a/config/example_config.json
+++ b/config/example_config.json
@@ -1,10 +1,11 @@
 {
-  "authserver.jksfile": "config/authkeystore_example.jks",
-  "authserver.jkspasswd": "somepasswd",
-  "authserver.url": "auth.iudx.org.in",
-  "vocserver.jksfile": "config/iudxkeystore.jks",
-  "vocserver.jkspasswd": "somepassword",
-  "vocserver.http.port": 443,
+  "authserver.jksfile": "can be the same as vocserver.jksfile",
+  "authserver.jkspasswd": "password",
+  "authserver.url": "authurl",
+  "vocserver.jksfile": "JKS file",
+  "vocserver.jkspasswd": "Some password",
+  "vocserver.http.port": 8080,
+  "vocserver.http.cname": "example.com",
   "vocserver.http.instances": 2,
   "vocserver.database.queue": "vocserver.database.queue",
   "vocserver.database.url": "mongodb://localhost:27017",
