Updated rxjs view for class details. Search bar working

--- a/ui/package.json
+++ b/ui/package.json
@@ -17,12 +17,15 @@
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
     "@angular/forms": "~9.1.4",
+    "@angular/localize": "~9.1.4",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@types/jquery": "^3.3.38",
     "bootstrap": "^4.4.1",
+    "bootstrap-autocomplete": "^2.3.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
