--- a/config/example_config.json
+++ b/config/example_config.json
@@ -15,5 +15,6 @@
   "vocserver.database.name": "voc",
   "vocserver.database.poolname": "mongo_pool",
   "vocserver.auth.instances": 2,
-  "vocserver.auth.queue": "vocserver.auth.queue"
+  "vocserver.auth.queue": "vocserver.auth.queue",
+  "vocserver.testing": false
 }
