--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,24 @@
      <artifactId>vertx-web-client</artifactId>
      <version>3.8.2</version>
     </dependency>
-
-
-
-
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>3.3.3</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.powermock</groupId>
+        <artifactId>powermock-module-junit4</artifactId>
+        <version>2.0.7</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.powermock</groupId>
+        <artifactId>powermock-api-mockito2</artifactId>
+        <version>2.0.7</version>
+        <scope>test</scope>
+    </dependency>
 
     <!-- tag::codegen-dep[] -->
     <dependency>
