--- a/ui/tsconfig.app.json
+++ b/ui/tsconfig.app.json
@@ -1,9 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
-    "types": ["./node_modules/@types/jquery"]
+    "outDir": "./out-tsc/app"
+    // "types": ["./node_modules/@types/jquery"]
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"]
+  "include": ["src/**/*.d.ts"],
+  "angularCompilerOptions": {
+    "enableIvy": false
+  }
 }
