--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - voc-net
     expose:
       - "27017"
+    command: mongod --auth
     logging:
          driver: "json-file"
          options:
