--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.4",
-    "@angular/cdk": "^9.2.3",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.4",
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
@@ -30,6 +30,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-autocomplete": "^2.3.5",
     "jquery": "^3.5.1",
+    "ngx-highlightjs": "^4.1.0-beta",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
