--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "user-contrib-models"]
 	path = user-contrib-models
 	url = https://github.com/datakaveri/user-contrib-models.git
+[submodule "frontend"]
+	path = iudx-voc-ui
+	url = https://github.com/datakaveri/iudx-voc-ui.git
