--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - voc-net
     volumes:
       - ./:/vocserver
-    command: sh -c "cd vocserver && ./config/search_setup.sh &&
+    command: sh -c "cd vocserver &&  ./config/search_setup.sh &&
               java -jar target/vocserver-1.0-fat.jar -conf config/vocserver.json"
     logging:
          driver: "json-file"
@@ -87,7 +87,7 @@ services:
              max-size: "100m"
   
   search:
-    image: getmeili/meilisearch
+    image: getmeili/meilisearch:v0.12.0
     networks: 
       - voc-net
     expose:
