[Update] Prefix can be specified in config

--- a/config/example_config.json
+++ b/config/example_config.json
@@ -1,4 +1,5 @@
 {
+  "vocserver.prefix": "iudx:",
   "vocserver.type": "localauth",
   "vocserver.webhookpasswd": "pass",
   "vocserver.localpassword": "pass",
